# tycho

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
adapters/: README.md
docs/: CANONICAL_GOVERNANCE_FORMAT.md  PLAYBOOK.md  PRD.txt  PROFILE_INDUCTION_ARCHITECTURE.md  PROFILE_INDUCTION_IMPLEMENTATION_PLAN.md  PROFILE_SPEC.md  PROPERTY_EXTRACTION_DESIGN.md  PROPERTY_EXTRACTION_IMPLEMENTATION_PLAN.md  REVIEWER_PROMPT.md  REVIEW_2026-04-10.md  REVIEW_2026-04-15.md  REVIEW_ASSIGNMENT_2026-04-10.md  REVIEW_ASSIGNMENT_2026-04-15.md  REVIEW_ASSIGNMENT_PHASES_1_AND_2.md  REVIEW_ASSIGNMENT_PHASE_3.md  REVIEW_ASSIGNMENT_PHASE_4.md  REVIEW_ASSIGNMENT_PHASE_5.md  REVIEW_ASSIGNMENT_PHASE_6.md  REVIEW_ASSIGNMENT_PHASE_7.md  REVIEW_PHASES_1_AND_2.md  REVIEW_PHASE_3.md  REVIEW_PHASE_4.md  REVIEW_PHASE_5.md  REVIEW_PHASE_5_RESUME.md  REVIEW_PHASE_6.md  REVIEW_PHASE_6_RECHECK.md  REVIEW_PHASE_7.md  REVIEW_PROMPT_BUSINESS_RULES_AND_REFERENCE.md  REVIEW_PROMPT_ROUND_4_RECHECK.md  REVIEW_PROMPT_SOURCE_B_AND_FIXES.md  REVIEW_PROMPT_SOURCE_C_REFACTOR.md  SPIRES.md  governance_example.json  ontozense-npl-advanced.md  ontozense-npl-tutorial.md  ontozense-npl-validation.md  ssfabn.xlsx  why_the_playbook.md
scripts/: export_tycho_public.py  publish_public_branch.py
tests/: test_attribute.py  test_bridging.py  test_business_rules.py  test_candidate_envelope.py  test_candidate_graph.py  test_candidate_graph_cross_source.py  test_candidate_graph_orchestrator.py  test_cli_discovery.py  test_cli_draft.py  test_cli_extract_a.py  test_cli_ingest.py  test_cli_load_env.py  test_cli_survey.py  (+66 more)
(+108 files in other folders)
