[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontozense"
version = "0.1.0"
description = "Extract, engineer, and refine ontologies from domain documents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rdflib>=7.0",
    "owlrl>=6.0",
    "ontogpt>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "psycopg2-binary>=2.9",
    "sqlglot>=25.0",
    "networkx>=3.2",
    "litellm>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
ontozense = "ontozense.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ontozense"]

[tool.hatch.build.targets.wheel.force-include]
"src/ontozense/templates" = "ontozense/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
